# Let-s-go-now

./: main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  model_config.py
app/graphs/: trip_graph.py  trip_state.py
app/llm/: __init__.py  base.py  openai_compatible.py
app/nodes/: __init__.py  build_itinerary.py  estimate_budget.py  final_output.py  generate_candidates.py  generate_plan.py  hotel_area_selector.py  hotel_research.py  hotel_selector.py  merge_candidates.py  parse_intent.py  research_sources.py  route_optimizer.py  select_core_places.py  verify_plan.py
app/prompts/: trip_plan.py
app/schemas/: __init__.py  candidates.py  hotels.py  routes.py  selection.py  trip.py
tests/: test_api.py  test_budget.py  test_build_itinerary.py  test_candidates.py  test_graph.py  test_hotel_area_selector.py  test_hotel_research_selector.py  test_llm.py  test_no_mock_code.py  test_route_optimizer.py  test_schemas.py  test_security.py  test_select_core_places.py  test_verify_plan.py
